--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
     <title>WDD 130 | Personal Homepage</title>
 </head>
 <body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
-
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Site</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Augustin Nkamba Kabeya | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Hi, I am Augustin Nkamba Kabeya" width="200">
+        <p>Hi! My name is Augustin NKamba Kabeya, and I’m originally from the Democratic Republic of the Congo. I’m currently a student at Brigham Young University (BYU), where I’m pursuing my studies with a strong interest in computers, mathematics, and technology. Outside of academics, I enjoy expressing myself through music — I play both the piano and the guitar. Whether it's solving a complex equation or composing a melody, I love finding patterns and creativity in everything I do. I'm passionate about learning, building new skills, and connecting with others who share similar interests in tech, music, and education.</p>
+    </main>
+    <footer>
+        <p>2025 Augutin Nkamba Kabeya, Copyright</p>
+    </footer>
 </body>
 </html>
