--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>Hi! My name is Augustin NKamba Kabeya, and I’m originally from the Democratic Republic of the Congo. I’m currently a student at Brigham Young University (BYU), where I’m pursuing my studies with a strong interest in computers, mathematics, and technology. Outside of academics, I enjoy expressing myself through music — I play both the piano and the guitar. Whether it's solving a complex equation or composing a melody, I love finding patterns and creativity in everything I do. I'm passionate about learning, building new skills, and connecting with others who share similar interests in tech, music, and education.</p>
     </main>
     <footer>
-        <p>© 2025 🗓️ Augustin Nkamba Kabeya 🌍 Congo-Kinshasat</p>
+        <p>© 2025 🗓️ Augustin Nkamba Kabeya 🌍 Congo-Kinshasa</p>
     </footer>
 </body>
 </html>
