--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+    <meta name="author" content="Augustin Nkamba Kabeya" >
 </head>
 <body>
+    <header>
+        <img src="images\basic-logo.png" alt="this is our logo" width="128" height="128" >
+    </header>
+    <nav>
+        <ul>
+            <li> <a href="https://www.facebook.com/profile.php?id=100018203557616&locale=fr_FR">Facebook</a> </li>
+            <li> <a href="https://www.linkedin.com/in/augustinankc/">LinkedIn</a> </li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Basic HTML Structure</h1>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, vel!</p>
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias, facilis.</p>
+        </section>
+    </main>
+    <aside>
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/aba-nigeria/400x250/aba-nigeria-temple-lds-273999-wallpaper.jpg" alt="Nigeria Temple" width="200">
+    </aside>
+    <footer>
+        <p>Augustin Nkamba Kabeya</p>
+    </footer>
     
 </body>
 </html>
