--- a/week02/block-vs-inline.html
+++ b/week02/block-vs-inline.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise: Block vs. Inline Elements</title>
-    <link rel="stylesheet" href="styles/block-vs-inline.css">
+    <link rel="stylesheet" href="style/block-vs-inline.css">
 </head>
 
 <body>
@@ -15,17 +15,17 @@
             boundaries.</p>
 
         <h2>Task 1: Swap Block and Inline Elements</h2>
-        <div>In the HTML of this document, change this div element to a span element.</div>
+        <span> the HTML of this document, change this div element to a span element.</span>
 
         <p class="question">What happens to the layout? Does it still take up the full width?</p>
 
         <h2>Task 2: Nesting Inline in Block</h2>
         <p>A paragraph &lt;p&gt; element (block) with a <span>&lt;span&gt; element;</span></p>
-        <p class="question">Add another inline element like &lt;em&gt; or &lt;strong&gt; inside the paragraph. Observe
+        <p class="question">Add another inline element like &lt;em&gt; or <a href="www.facebook.com">&lt;strong&gt;</a> inside the paragraph. Observe
             how it flows within the line.</p>
 
         <h2>Task3: Nesting Block in Inline</h2>
-        <span>Try placing a &lt;div&gt; inside a &lt;span&gt; element.</span>
+        <span>Try placing a  <div>&lt;div&gt;</div> inside a &lt;span&gt; element.</span>
             <p class="question">What error or layout issue do you see? Why does this happen?</p>
 
 
