--- a/week02/block-vs-inline.html
+++ b/week02/block-vs-inline.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise: Block vs. Inline Elements</title>
-    <link rel="stylesheet" href="style/block-vs-inline.css">
+    <link rel="stylesheet" href="styles/block-vs-inline.css">
 </head>
 
 <body>
